Bug#30366 NDB fails to start on OS X, PPC, 64 bit    - The errno variable should only be used when the previous socket      write failed, it should be regarded as undefined at other times

OutputStream.cpp:
  Only use "errno" after the attempt to write to the socket has failed