storage/ndb/src/common/util/OutputStream.cpp
@@ -62,7 +62,7 @@ SocketOutputStream::print(const char * fmt, ...){
 
   if(ret >= 0)
     m_timeout_remain-=time;
-  if(errno==ETIMEDOUT || m_timeout_remain<=0)
+  if((ret < 0 && errno==ETIMEDOUT) || m_timeout_remain<=0)
   {
     m_timedout= true;
     ret= -1;
@@ -84,7 +84,7 @@ SocketOutputStream::println(const char * fmt, ...){
 
   if(ret >= 0)
     m_timeout_remain-=time;
-  if (errno==ETIMEDOUT || m_timeout_remain<=0)
+  if ((ret < 0 && errno==ETIMEDOUT) || m_timeout_remain<=0)
   {
     m_timedout= true;
     ret= -1;
